fix input and label alignment

--- a/quiz/styles.css
+++ b/quiz/styles.css
@@ -51,6 +51,9 @@ h1, h2 {
 
 h2 {
     border-bottom: 4px solid #dfdfe2;
+    margin-top: 60px;
+    /* padding:60px;
+    margin-top:0; */
 }
 
 p::before {
@@ -86,4 +89,31 @@ section {
     margin-left:auto;
     margin-bottom: 10px;
     max-width: 600px;
+}
+
+/*code on fcc site*/
+.info {
+    padding-top:2px;
+    padding-left:2px;
+    padding-right:0;
+    padding-bottom:0;
+}
+
+.formrow {
+    margin-top: 30px;
+    padding: 0 15px;
+}
+
+input {
+    font-size: 16px;
+}
+
+.info > input {
+    width: 50%;
+    text-align: left;
+}
+
+.info > label {
+    width: 10%;
+    min-width: 55px;
 }
